@@ -89,6 +89,7 @@ exportMethods(primaryClusterIndex)
 exportMethods(primaryClusterLabel)
 exportMethods(primaryClusterNamed)
 exportMethods(primaryClusterType)
+exportMethods(recolorClusters)
 exportMethods(removeClusterings)
 exportMethods(removeClusters)
 exportMethods(removeUnclustered)
