@@ -115,6 +115,7 @@ setGeneric(
 setGeneric("clusterLegend", function(x) { standardGeneric("clusterLegend")})
 setGeneric("clusterLegend<-", function(object, value){standardGeneric("clusterLegend<-") })
 setGeneric("renameClusters", function(object,value,...) { standardGeneric("renameClusters")})
+setGeneric("recolorClusters", function(object,value,...) { standardGeneric("recolorClusters")})
 
 setGeneric(
     name = "orderSamples",
