@@ -64,6 +64,8 @@
 \alias{clusterLegend<-}
 \alias{renameClusters,ClusterExperiment,character-method}
 \alias{renameClusters}
+\alias{recolorClusters,ClusterExperiment,character-method}
+\alias{recolorClusters}
 \alias{orderSamples,ClusterExperiment-method}
 \alias{orderSamples}
 \alias{orderSamples<-,ClusterExperiment,numeric-method}
@@ -139,6 +141,9 @@
 \S4method{clusterLegend}{ClusterExperiment,list}(object) <- value
 
 \S4method{renameClusters}{ClusterExperiment,character}(object, value,
+  whichCluster = "primary")
+
+\S4method{recolorClusters}{ClusterExperiment,character}(object, value,
   whichCluster = "primary")
 
 \S4method{orderSamples}{ClusterExperiment}(x)
@@ -231,6 +236,8 @@ of the clusters used to create dendrogram
 \code{clusterLabels} returns/sets the column names of the clusterMatrix slot.
 
 \code{clusterLegend} returns/sets the clusterLegend slot.
+
+\code{renameClusters} changes the names assigned to clusters within a clustering
 
 \code{renameClusters} changes the names assigned to clusters within a clustering
 
