@@ -13,7 +13,7 @@ Changes:
   - `primaryClusterLabel` and `primaryClusterType`
   - `getReducedData` 
   - `assignUnassigned`
-	- `renameClusters` to assign new names to clusters within a particular clustering
+	- `renameClusters` and `recolorClusters` to assign new names/colors to clusters within a particular clustering
   - `clusterMatrixNames` and `clusterMatrixColors` as wrappers to `convertClusterLegend` to return matrix like `clusterMatrix` only with the names or colors in place of the internal cluster ids.
 * Arguments changed:
   - `sampleData` changed to `colData` to match `SummarizedExperiment` syntax. Similarly `alignSampleData` has changed to `alignColData`
@@ -23,6 +23,7 @@ Changes:
 * Allow `getClusterManyParams` to search old `clusterMany` runs as well.
 * Added error catch if try to give argument `whichCluster` to `mergeCluster`.
 * Added error catch if give param `whichClusters` to functions that only take `whichCluster` (singular) as an argument
+* Added `table` method to `plotHeatmap`
 
 Bugs:
 * Add check for merge_nodeMerge table that `mergeClusterId` column can't be NA for entries where `isMerged=TRUE`
